--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+
+    <style name="actionbutton">
+        <item name="android:layout_width">216dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginBottom">356dp</item>
+    </style>
 </resources>
